\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{CHANGES}
\title{Windows-specific changes to R}
\encoding{UTF-8}

\section{CHANGES IN R VERSION 2.14.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{Save as} menu item on the script
      editor appends \file{.R} to a file name without an extension.
    }
  }
}

\section{CHANGES IN R VERSION 2.14.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{yLineBias} of the \code{windows()} family of
      devices has been changed from 0.1 to 0.2: this changes slightly
      the vertical positioning of text (including axis annotations).
      This can be overridden by setting the new \code{"ylbias"} graphical
      parameter.  This was done for consistency with other devices
      such as \code{pdf()}.

      \item \command{R CMD build} once again attempts to preserve file
      permissions on Windows.

      \item There is support for cairographics-based devices using the
      same code as on Unix-alikes.  This can be selected by the new
      \code{type} argument of the bitmap devices \code{bmp()},
      \code{jpeg()}, \code{png()} and \code{tiff()}, and devices
      \code{svg()}, \code{cairo_pdf()} and \code{cairo_ps()} are now
      available on Windows.

      These are not compiled in by default when building from source:
      see the instructions in the \sQuote{R Installation and
	Administration Manual}.

      \item All the Windows-specific graphics devices now have a
      \code{family} argument.  If non-empty this specifies an initial
      family to be used for fonts 1--4.  If empty the fonts specified in
      the \file{Rdevga} configuration file are used for the Windows GDI
      devices and \code{"sans"} for cairographics-based devices.

      This will generally be a Windows font name such as
      \code{"Lucida Bright"} or one of the device-independent names
      (\code{"sans"}, \code{"serif"} and \code{"mono"}).  Outside